--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Playful Yet Seriously Reliable | pysr.xyz</title>
+    <meta
+      name="description"
+      content="At pysr.xyz, playful creativity intertwines with serious blockchain and Defi expertise. Crafting data visualizations and robust backend solutions."
+    />
   </head>
   <body>
     <div id="root"></div>
